# ai-trading-bot

./: .env.example  .gitignore  README.md  eod-recap-2026-05-18.md  eod-recap-2026-05-23.md  eod-recap-2026-05-26.md  fleet_tasks.py  morning-watch-2026-05-19.md  morning-watch-2026-05-23.md  morning-watch-2026-05-25.md  morning-watch-2026-05-26.md  morning-watch-2026-06-01.md  morning-watch-2026-06-02.md  pyproject.toml
atb/: __init__.py  features.py  llm.py  pipeline.py  store_sqlite.py  universe.py
atb/eval/: __init__.py  grading.py  judge.py  predictions.py  reliability.py
atb/signal/: __init__.py  base.py  intersection.py  llm_analyst.py  logistic.py  pead_model.py
atb/train/: __init__.py  dataset.py  trainer.py
deploy/: README.md  com.charles.atb-daily.plist
docs/: alpaca-paper-setup.md  backtest.md  brain-eval-runbook-2026-06-16.md  eval-reporting.md  grading-review-2026-06-16.md  phase0-execution-reuse-2026-06-16.md  pivot-2026-06-16.md  prediction-loop.md  strategy-research-2026-06-16.md
scripts/: backtest.py  check_alpaca.py  debug_earnings.py  grade.py  judge_demo.py  paper_smoke.py  report.py  run_daily.sh  run_once.py  run_remaining.py  scan.py  show_features.py  smoke_eval.py  sync_dashboard.py  train_model.py
tests/: conftest.py  test_eval.py  test_executor.py  test_exit_manager.py  test_features.py  test_finnhub.py  test_intent.py  test_pipeline.py  test_resolver.py  test_risk.py  test_signal.py  test_sizing.py  test_store_sqlite.py  test_train.py
trader_core/: README.md  __init__.py  config.py  ports.py
trader_core/broker/: __init__.py  (+2 more)
(+23 files in other folders)
