[project]
name = "ai-trading-bot"
version = "0.0.1"
description = "Options trading research bot with Claude Opus 4.7 as the analyst layer"
authors = [{ name = "Charles Ow", email = "charles_ow@berkeley.edu" }]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "duckdb>=1.0.0",
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "yfinance>=0.2.40",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
